@@ -3,10 +3,10 @@ bin_SCRIPTS = locarna.pl mlocarna locarnate locarna-motif-scan		\
 	      aln2fa.pl locarnap-realign-all.pl				\
 	      locarnap-revisit-RNAz-hits.pl				\
 	      locarnap-predict-and-plot.pl locarnap-revcomp.pl RNAz.pm	\
-	      LocARNA_RNAz.pm
+	      LocARNA_RNAz.pm dot2pp pp2dot
 EXTRA_DIST = locarna.pl mlocarna.in locarnate.in locarna-motif-scan	\
               plot-bmprobs gen-reliab-dot.pl reliability-profile.pl	\
               aln2fa.pl locarnap-realign-all.pl				\
               locarnap-revisit-RNAz-hits.pl				\
               locarnap-predict-and-plot.pl locarnap-revcomp.pl RNAz.pm	\
-              LocARNA_RNAz.pm
+              LocARNA_RNAz.pm dot2pp pp2dot
